Fix paralax on firefox

--- a/public/assets/sass/sections/banner.scss
+++ b/public/assets/sass/sections/banner.scss
@@ -50,3 +50,9 @@
     }
   }
 }
+
+@-moz-document url-prefix() {
+    .banner-secondary {
+      max-height: 50rem;
+    }
+  }
